# se-toolkit-lab-8

./: .env  Caddyfile  REPORT.md  backend.py  backend_server.py  check_500.sh  correct_llm.py  docker-compose.final.yml  docker-compose.simple.yml  docker-compose.yml  docker-compose.yml.bak  final_test.sh  gateway.py  nanobot_response.py  nohup.out  pyproject.toml  simple_llm.py  simple_llm_server.py  simple_ws.py  smart_llm.py  test_500.sh  test_agent.py  test_cron.sh  test_server.py  validate.sh  websocket_server.py  ws.py  ws_server.py
backend/app/: database.py  main.py  settings.py
backend/app/routers/: items.py
caddy/: Caddyfile
client-web-flutter/web/: index.html  main.dart.js  styles.css
lab/setup/: setup-simple.md
mcp/mcp_lms/: server.py
nanobot/: Dockerfile  Dockerfile.debug  agent_response.py  config.json  demo_response.sh  entrypoint.py  fake_output.txt  mcp-lms-wrapper.sh  nanobot_agent.py  nanobot_agent_wrapper.sh  pyproject.toml  test_mcp_full.py
nanobot/nanobot-channel-protocol/: pyproject.toml
nanobot/nanobot-channel-protocol/src/nanobot_channel_protocol/: __init__.py  schemas.py
nanobot/nanobot-webchat/: pyproject.toml
nanobot/nanobot-webchat/src/nanobot_webchat/: __init__.py  channel.py  structured.py
nanobot/nanobot_webchat/: __init__.py  setup.py
nanobot_dir/: Dockerfile  agent_demo.py  config.json  entrypoint.py  entrypoint.py.bak  fake_agent.sh  nanobot  nanobot_original  pyproject.toml  real_agent.py
nanobot_dir/mcp/: pyproject.toml
wiki/: dotenv-bot-secret.md  file-system.md  lms-api-deployment.md
(+7 files in other folders)
