[project]
name = "nanobot-channel-protocol"
version = "0.1.0"
description = "Shared structured message schemas for nanobot channel clients"
requires-python = "==3.14.*"
dependencies = [
    "pydantic>=2.12.0,<3.0.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["nanobot_channel_protocol*"]
